--- a/.github/workflows/news.yml
+++ b/.github/workflows/news.yml
@@ -1,8 +1,8 @@
 name: news pipeline
 
 on:
-  schedule:                # 평일 08:00 KST = 23:00 UTC
-    - cron: '0 0 * * 1-5'
+  schedule:
+    - cron: '0 4 * * 1-5'     # ★ UTC 04:00 = 한국 13:00 평일
   workflow_dispatch: {}    # 수동 버튼으로도 실행 가능
 
 jobs:
